전체 컨텐츠 정렬 수정 중

--- a/assets/01-html/01-htmlStart/01-html_start.html
+++ b/assets/01-html/01-htmlStart/01-html_start.html
@@ -15,9 +15,10 @@
 		</p>
 	</blockquote>
 
-	<section class="ol_lst mt_l">
+	<section class="ol_lst mt_xl">
 		<h2 class="sound_only">기능 설명</h2>
-		<ol>
+		<h2>html 설명</h2>
+		<ol class="indent mt_s">
 			<li>HTML은 'HyperText Markup Language'의 약자입니다.</li>
 			<li>웹 페이지는 HTML 문서라고도 불리며, HTML 태그들로 구성됩니다.</li>
 			<li>HTML(HyperText Markup Language)은 웹 페이지를 만들기 위한 표준 마크업 언어입니다.</li>
@@ -31,9 +32,9 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/01-htmlStart/1.1.html_basic.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/01-htmlStart/1.1.html_basic.html">
 		<h2 class="ve_tit">HTML 기본구조</h2>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
