--- a/assets/01-html/02-blockInline/03-inline_element.html
+++ b/assets/01-html/02-blockInline/03-inline_element.html
@@ -39,7 +39,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.3.inline_element.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/02-blockInline/2.3.inline_element.html">
 		<h2 class="ve_tit">inline 요소의 기본 구조</h2>
 		<div class="uk_gist_code_box indent mt_m" data-tit="Inline elements">
 				<textarea readonly="readonly">
