--- a/assets/01-html/02-blockInline/04-span_inline.html
+++ b/assets/01-html/02-blockInline/04-span_inline.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.4.span_inline.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/02-blockInline/2.4.span_inline.html">
 		<h2 class="ve_tit">span 구조 예시</h2>
 		<div class="uk_gist_code_box indent mt_m" data-tit="span elements">
 				<textarea readonly="readonly">
@@ -26,7 +26,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="span">
+	<aside class="browser_support mt_xxl" data-tit="span">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
