--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -13,7 +13,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l">
+	<section class="view_editor ex_code mt_xl">
 		<h2 class="ve_tit">예제</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
@@ -91,7 +91,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="header">
+	<aside class="browser_support mt_xxl" data-tit="header">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
