--- a/assets/01-html/03-sections/02-heading_element.html
+++ b/assets/01-html/03-sections/02-heading_element.html
@@ -16,7 +16,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_l">
+	<section class="view_editor edit_code mt_xl">
 		<h2 class="ve_tit">예제</h2>
 		<div class="view_editor edit_code indent" data-target="html/03-sections/3.2.heading_element1.html">
 			<div class="uk_editor min-height-450" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -30,7 +30,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="h1~h6">
+	<aside class="browser_support mt_xxl" data-tit="h1~h6">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
