--- a/assets/01-html/03-sections/03-section_element.html
+++ b/assets/01-html/03-sections/03-section_element.html
@@ -15,7 +15,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l">
+	<section class="view_editor ex_code mt_xl">
 		<h2 class="ve_tit">기본 문법</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="section element">
@@ -54,14 +54,14 @@
 	</section>
 
 
-	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.3.section_element3.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/03-sections/3.3.section_element3.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="section">
+	<aside class="browser_support mt_xxl" data-tit="section">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
