--- a/assets/01-html/03-sections/05-article_element.html
+++ b/assets/01-html/03-sections/05-article_element.html
@@ -15,7 +15,7 @@
 	</section>
 
 
-	<section class="view_editor ex_code mt_l">
+	<section class="view_editor ex_code mt_xl">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="article element">
 				<textarea readonly="readonly">
@@ -63,7 +63,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="article">
+	<aside class="browser_support mt_xxl" data-tit="article">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
