--- a/assets/01-html/04-grouping/01-main_element.html
+++ b/assets/01-html/04-grouping/01-main_element.html
@@ -22,8 +22,8 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_l">
-		<h2 class="ve_tit">main 요소를 하나 이상 사용할때 올바른 예</h2>
+	<section class="view_editor ex_code mt_xl">
+		<h2 class="ve_tit">main 요소를 하나 이상 사용할 때 올바른 예</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
 			<textarea readonly="readonly">
@@ -65,8 +65,8 @@
 		</div>
 	</section>
 
-	<section class="view_editor ex_code ex_wrong mt_l" data-target="html/04-grouping/4.1.main_element/4.1.main_element4.html">
-		<h2 class="ve_tit">main 요소를 하나 이상 사용할때 잘못된 예</h2>
+	<section class="view_editor ex_code ex_wrong mt_xl" data-target="html/04-grouping/4.1.main_element/4.1.main_element4.html">
+		<h2 class="ve_tit">main 요소를 하나 이상 사용할 때 잘못된 예</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="main element">
 			<textarea readonly="readonly">
 				<main>...</main>
@@ -76,7 +76,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="main">
+	<aside class="browser_support mt_xxl" data-tit="main">
 		<ul>
 			<li class="ie false">지원안함</li>
 			<li class="edge">12.0</li>
