--- a/assets/01-html/04-grouping/03-ol_element.html
+++ b/assets/01-html/04-grouping/03-ol_element.html
@@ -14,8 +14,9 @@
 		</p>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>4.3.1. ol(ordered list) 속성</h2>
+		<!--<h2>ol(ordered list) 속성</h2>-->
 
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[reversed] <span class="t_blue">&lt;ol reversed&gt;</span></h3>
@@ -95,7 +96,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="ol">
+	<aside class="browser_support mt_xxl" data-tit="ol">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
