--- a/assets/01-html/04-grouping/07-dt_element.html
+++ b/assets/01-html/04-grouping/07-dt_element.html
@@ -18,7 +18,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.7.dt_element/4.7.dt_element.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.7.dt_element/4.7.dt_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="dt element">
 			<textarea readonly="readonly">
@@ -34,7 +34,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="dt">
+	<aside class="browser_support mt_xxl" data-tit="dt">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
