--- a/assets/01-html/04-grouping/08-dd_element.html
+++ b/assets/01-html/04-grouping/08-dd_element.html
@@ -15,7 +15,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.8.dt_element/4.8.dd_element.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.8.dt_element/4.8.dd_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="dd element">
 			<textarea readonly="readonly">
@@ -33,7 +33,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="dd">
+	<aside class="browser_support mt_xxl" data-tit="dd">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
