--- a/assets/01-html/04-grouping/13-blockquote_element.html
+++ b/assets/01-html/04-grouping/13-blockquote_element.html
@@ -13,8 +13,9 @@
 		</p>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>4.13.1. blockquote 속성</h2>
+		<!--<h2>blockquote 속성</h2>-->
 
 		<article class="txt_ex indent_max mt_m">
 			<h3 class="ml_mn">[cite] <span class="t_blue">&lt;blockquote cite="URL"&gt;</span></h3>
@@ -23,7 +24,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_l">
+	<section class="view_editor ex_code mt_xl">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="blockquote element">
 			<textarea readonly="readonly">
@@ -54,7 +55,7 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element3.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.13.blockquote_element/4.13.blockquote_element3.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
@@ -62,7 +63,7 @@
 	</section>
 
 
-	<aside class="browser_support mt_l" data-tit="blockquote">
+	<aside class="browser_support mt_xxl" data-tit="blockquote">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
