--- a/assets/01-html/05-textLevel/01-a_element.html
+++ b/assets/01-html/05-textLevel/01-a_element.html
@@ -44,8 +44,9 @@
 		</ol>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xxl">
 		<h2>5.1.1. a 속성</h2>
+		<!--<h2>a element 속성 설명</h2>-->
 
 		<article class="txt_ex indent_max mt_l">
 			<h3 class="ml_mn">[href] <span class="t_blue">&lt;a href=&quot;URL 주소&quot;&gt;</span></h3>
