--- a/assets/01-html/05-textLevel/03-i_element.html
+++ b/assets/01-html/05-textLevel/03-i_element.html
@@ -36,14 +36,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.3.i_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.3.i_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xxl">
 		<h2><mark><code>&lt;i&gt;</code></mark> vs. <mark><code>&lt;em&gt;</code></mark></h2>
 		<p class="indent">
 			신입 개발자들은 글자를 강조하는데에 왜 이렇게 많은 요소들이 있는지에 대해 혼란스러워합니다.<br>
@@ -67,7 +67,7 @@
 		</p>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="i">
+	<aside class="browser_support mt_xxl" data-tit="i">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
