--- a/assets/01-html/05-textLevel/06-br_element.html
+++ b/assets/01-html/05-textLevel/06-br_element.html
@@ -17,7 +17,7 @@
 			HTML4에서는 <code>&lt;br&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 태그를 닫아야만 합니다.<br>
 			HTML5에서는 <code>&lt;br&gt;</code> 요소의 종료 태그 닫아도 되고 닫지 않는것 모두 허용합니다.
 		</p>
-		<div class="view_editor ex_code mt_l">
+		<div class="view_editor ex_code mt_xl">
 			<h3 class="ve_tit">기본 문법 :</h3>
 			<div class="uk_gist_code_box indent mt_ms" data-tit="br element">
 				<textarea readonly="readonly">
@@ -37,14 +37,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.6.br_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.6.br_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="br">
+	<aside class="browser_support mt_xxl" data-tit="br">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
