--- a/assets/01-html/05-textLevel/07-small_element.html
+++ b/assets/01-html/05-textLevel/07-small_element.html
@@ -12,7 +12,7 @@
 			HTML5에서 <code>&lt;small&gt;</code> 요소는 해당 텍스트의 스타일 표현과는 별도로
 			저작권(copyright)이나 법률적인 내용의 부연 설명이나 작은 페이지를 나타낼 때 사용되도록 변경되었습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="small element CSS default">
 				<textarea readonly="readonly">
@@ -24,14 +24,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.7.small_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.7.small_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="small">
+	<aside class="browser_support mt_xxl" data-tit="small">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
