--- a/assets/01-html/05-textLevel/12-mark_element.html
+++ b/assets/01-html/05-textLevel/12-mark_element.html
@@ -23,7 +23,7 @@
 				예를 들어 검색 작업과 일치하는 단어를 나타내는 데 사용할 수 있습니다.
 			</li>
 		</ol>
-		<div class="line_code mt_m">
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="mark element CSS default">
 				<textarea readonly="readonly">
@@ -36,14 +36,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.12.mark_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.12.mark_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="mark">
+	<aside class="browser_support mt_xxl" data-tit="mark">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
