--- a/assets/01-html/05-textLevel/18-time_element.html
+++ b/assets/01-html/05-textLevel/18-time_element.html
@@ -17,9 +17,9 @@
 			<code>&lt;time&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
 			<mark>Internet Explorer : No support(지원하지 않음)</mark>
 		</p>
-		<ol class="indent mt_m">
+		<ol class="indent mt_ms">
 			<li>
-				datetime 속성 - <b class="t_blue">&lt;time datetime=&quot;날짜와 시간&quot;&gt;</b>
+				<code>datetime</code> 속성 - <b class="t_blue">&lt;time datetime=&quot;날짜와 시간&quot;&gt;</b>
 				<div class="line_code mt_s">
 					<p><code>&lt;time&gt;</code> 요소의 날짜와 시간 데이터를 기계가 읽을 수 있는 형태로 명시함.</p>
 				</div>
@@ -35,14 +35,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.18.time_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.18.time_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="time">
+	<aside class="browser_support mt_xxl" data-tit="time">
 		<ul>
 			<li class="ie false">지원안함</li>
 			<li class="edge">지원</li>
