--- a/assets/01-html/05-textLevel/22-bdo_element.html
+++ b/assets/01-html/05-textLevel/22-bdo_element.html
@@ -12,7 +12,7 @@
 			<code>&lt;bdo&gt;</code> 요소의 BDO는 Bi-Directional Override를 의미하며, 자식 요소의 텍스트 방향성(text directionality)을 정의할 때 사용합니다.<br>
 			다른 요소들과는 달리 <code>&lt;bdo&gt;</code> 요소의 dir 속성의 기본값은 부모 요소로부터 상속받지 않는다는 의미를 가지는 auto값으로 자동 설정됩니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="bdo element CSS default">
 				<textarea readonly="readonly">
@@ -22,7 +22,7 @@
 				</textarea>
 			</div>
 		</div>
-		<ol class="indent mt_m">
+		<ol class="indent mt_ms">
 			<li>
 				<mark>dir</mark> 속성 - <code>&lt;bdo dir=&quot;(이 요소의 텍스트 방향)ltr | rtl | auto&quot;&gt;</code>
 				<div class="line_code mt_s">
@@ -34,14 +34,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.22.bdo_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.22.bdo_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="bdo">
+	<aside class="browser_support mt_xxl" data-tit="bdo">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
