--- a/assets/01-html/05-textLevel/24-ruby_element.html
+++ b/assets/01-html/05-textLevel/24-ruby_element.html
@@ -18,9 +18,10 @@
 		</p>
 	</section>
 
-	<section class="mt_l">
-		<h2 class="hide">&lt;ruby&gt; 의 세부 요소</h2>
-		<article class="txt_ex">
+	<section class="indent mt_xl">
+		<h2 class="ml_mn">&lt;ruby&gt; 의 세부 요소</h2>
+
+		<article class="txt_ex mt_m">
 			<h3>&lt;rp&gt; 요소</h3>
 			<p class="indent">
 				<code>&lt;rp&gt;</code> 요소는 루비 주석(ruby annotation)을 지원하지 않는 브라우저에서만 표시될 문자를 정의할 때 사용합니다.<br>
@@ -72,14 +73,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.24.ruby_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.24.ruby_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="ruby">
+	<aside class="browser_support mt_xxl" data-tit="ruby">
 		<ul>
 			<li class="ie">5.0+</li>
 			<li class="edge">지원</li>
