--- a/assets/01-html/06-embedded/03-map_element.html
+++ b/assets/01-html/06-embedded/03-map_element.html
@@ -16,7 +16,7 @@
 			XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다. HTML5에서는 nohref 속성은 폐기되었습니다.<br>
 			<mark>HTML5.1부터 hreflang, type 속성은 더 이상 지원하지 않습니다.</mark>
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="map element CSS default">
 				<textarea readonly="readonly">
@@ -29,7 +29,8 @@
 	</section>
 
 	<section class="txt_ex mt_xxl">
-		<h2>6.3.1. map 속성</h2>
+		<!--<h2>6.3.1. map 속성</h2>-->
+		<h2>map 속성</h2>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;img name=&quot;이름&quot; id=&quot;name이름과 동일&quot;&gt;</span></h3>
@@ -39,7 +40,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.3.map_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.3.map_element.html">
 		<h3 class="ve_tit">예제</h3>
 		<div class="uk_editor indent min-height-400" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
@@ -47,7 +48,7 @@
 	</section>
 	<!-- 코드 편집용 에디터 -->
 
-	<aside class="browser_support mt_l" data-tit="img">
+	<aside class="browser_support mt_xxl" data-tit="img">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
