--- a/assets/01-html/06-embedded/06-audio_element.html
+++ b/assets/01-html/06-embedded/06-audio_element.html
@@ -13,7 +13,7 @@
 			브라우저가 가장 적합한 것을 선택합니다. MediaStream을 사용하여 스트리밍 미디어의 대상이 될 수도 있습니다.<br>
 			autoplay가 지정된 경우, preload는 무시됩니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="audio element CSS default">
 				<textarea readonly="readonly">
@@ -106,14 +106,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.6.audio_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.6.audio_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="audio">
+	<aside class="browser_support mt_xxl" data-tit="audio">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
