--- a/assets/01-html/06-embedded/08-picture_element.html
+++ b/assets/01-html/06-embedded/08-picture_element.html
@@ -77,7 +77,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/06-embedded/6.8.picture_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.8.picture_element.html">
 		<h3 class="ve_tit">코드 예제</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="picture element">
 			<textarea readonly="readonly">
@@ -111,7 +111,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="picture">
+	<aside class="browser_support mt_xxl" data-tit="picture">
 		<ul>
 			<li class="ie">지원안함</li>
 			<li class="edge">13.0</li>
