--- a/assets/01-html/06-embedded/09-source_element.html
+++ b/assets/01-html/06-embedded/09-source_element.html
@@ -36,7 +36,7 @@
 				<span class="reference mt_l"><a href="http://tools.ietf.org/html/rfc4281" target="_blank" title="새창열림">RFC 4281</a></span>에
 				코덱을 어떻게 지정하는지에 대한 정보를 확인할 수 있습니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="type">
+			<aside class="browser_support mt_ms" data-tit="type">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -53,7 +53,7 @@
 			<p class="mt_s">
 				<code>&lt;source&gt;</code> 요소가 <code>&lt;picture&gt;</code> 요소 내부에 사용될 때 필수 속성으로, 각각 다른 환경에서 사용될 이미지의 URL을 명시합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="srcset">
+			<aside class="browser_support mt_ms" data-tit="srcset">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -182,7 +182,7 @@
 					</li>
 				</ol>
 			</div>
-			<aside class="browser_support mt_ms" data-tit="media">
+			<aside class="browser_support mt_m" data-tit="media">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -195,7 +195,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/06-embedded/6.9.source_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.9.source_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="source element">
 			<textarea readonly="readonly">
@@ -221,7 +221,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="source">
+	<aside class="browser_support mt_xxl" data-tit="source">
 		<ul>
 			<li class="ie">10+</li>
 			<li class="edge">지원</li>
