--- a/assets/01-html/06-embedded/10-svg_element.html
+++ b/assets/01-html/06-embedded/10-svg_element.html
@@ -54,14 +54,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.10.svg_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.10.svg_element.html">
 		<h3 class="ve_tit">예제</h3>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="svg">
+	<aside class="browser_support mt_xxl" data-tit="svg">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">18.0</li>
