--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -48,7 +48,7 @@
 				항상 소문자로 시작하며, 특수문자는 '_(언더스코어)', '-(하이픈)'만 적용이 가능합니다.(ex. class="btn", class="btn-list", class="btn_list" 등)<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementsByClassName(), querySelectorAll(selector) 같은)를 통해서 요소를 선택하거나 접근합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="class">
+			<aside class="browser_support mt_ms" data-tit="class">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -68,7 +68,7 @@
 				한 페이지 내에서 유일한 name을 가지고 있어야 하며, 같은 name을 중복으로 사용할 수 없습니다.<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementById(), Document.querySelector() 같은)를 통해서 요소를 선택하거나 접근합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="id">
+			<aside class="browser_support mt_ms" data-tit="id">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -87,7 +87,7 @@
 				요소에 적용할 CSS를 선언합니다.<br>
 				인라인 스타일 방식이며, CSS 우선 순위에서는 1순위에 해당합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="style">
+			<aside class="browser_support mt_ms" data-tit="style">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -106,7 +106,7 @@
 				요소의 정보(설명)을 지정합니다.<br>
 				target="_blank" 속성이 있을 경우 title 속성에 "새 창" 또는 적합한 설명(예를 들어 '어디어디 사이트 새 창 열림' 등)을 기입해야 합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="title">
+			<aside class="browser_support mt_ms" data-tit="title">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
@@ -124,7 +124,7 @@
 			<p class="mt_s">
 				요소의 언어(ISO 639-1)를 지정합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="lang">
+			<aside class="browser_support mt_ms" data-tit="lang">
 				<ul>
 					<li class="ie">지원</li>
 					<li class="edge">지원</li>
