--- a/assets/01-html/03-sections/04-nav_element.html
+++ b/assets/01-html/03-sections/04-nav_element.html
@@ -18,7 +18,7 @@
 		</ol>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.4.nav_element.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/03-sections/3.4.nav_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="nav element">
 			<textarea readonly="readonly">
@@ -33,7 +33,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="nav">
+	<aside class="browser_support mt_xxl" data-tit="nav">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
