--- a/assets/01-html/03-sections/07-aside_element.html
+++ b/assets/01-html/03-sections/07-aside_element.html
@@ -12,7 +12,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.7.aside_element1.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/03-sections/3.7.aside_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="aside element">
 			<textarea readonly="readonly">
@@ -36,14 +36,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.7.aside_element2.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/03-sections/3.7.aside_element2.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="aside">
+	<aside class="browser_support mt_xxl" data-tit="aside">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
