--- a/assets/01-html/03-sections/08-hgroup_element.html
+++ b/assets/01-html/03-sections/08-hgroup_element.html
@@ -14,7 +14,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_m" data-target="html/03-sections/3.8.hgroup_element.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/03-sections/3.8.hgroup_element.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="hgroup element">
 			<textarea readonly="readonly">
@@ -35,7 +35,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="hgroup">
+	<aside class="browser_support mt_xxl" data-tit="hgroup">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
