--- a/assets/01-html/04-grouping/02-p_element.html
+++ b/assets/01-html/04-grouping/02-p_element.html
@@ -36,7 +36,7 @@
 		</ol>
 	</section>
 
-	<section class="ex_code view_editor mt_l">
+	<section class="ex_code view_editor mt_xl">
 		<h2 class="ve_tit">예제</h2>
 
 		<div class="uk_gist_code_box indent mt_ms" data-tit="p element">
@@ -97,7 +97,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="p">
+	<aside class="browser_support mt_xxl" data-tit="p">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
