--- a/assets/01-html/04-grouping/05-li_element.html
+++ b/assets/01-html/04-grouping/05-li_element.html
@@ -17,8 +17,9 @@
 		</p>
 	</section>
 
-	<section class="txt_ex mt_l">
+	<section class="txt_ex mt_xl">
 		<h2>4.5.1. li 속성</h2>
+		<!--<h2>li 속성</h2>-->
 
 		<article class="txt_ex indent mt_m">
 			<h3>[value] <span class="t_blue">&lt;li value="숫자"&gt;</span></h3>
@@ -34,7 +35,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/04-grouping/4.5.li_element/4.5.li_element1.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/04-grouping/4.5.li_element/4.5.li_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="li element">
 			<textarea readonly="readonly">
@@ -50,14 +51,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.5.li_element/4.5.li_element2.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.5.li_element/4.5.li_element2.html">
 		<h2 class="ve_tit">value 속성 사용과 ol reversed 사용 비교</h2>
 		<div class="uk_editor min-height-650 indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default"><!-- min-height-650 -->
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<ul class="browser_support mt_l" data-tit="reversed">
+	<ul class="browser_support mt_xxl" data-tit="reversed">
 		<li class="ie">지원</li>
 		<li class="edge">지원</li>
 		<li class="chrome">지원</li>
