--- a/assets/01-html/04-grouping/06-dl_element.html
+++ b/assets/01-html/04-grouping/06-dl_element.html
@@ -13,14 +13,14 @@
 		</p>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/04-grouping/4.6.dl_element/4.6.dl_element.html">
+	<section class="view_editor edit_code mt_xl" data-target="html/04-grouping/4.6.dl_element/4.6.dl_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="dl">
+	<aside class="browser_support mt_xxl" data-tit="dl">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
