--- a/assets/01-html/05-textLevel/05-b_element.html
+++ b/assets/01-html/05-textLevel/05-b_element.html
@@ -35,7 +35,7 @@
 				<code>&lt;b&gt;</code> 요소를 사용하는데에 있어 아무런 시멘틱 목적이 없다면, CSS 속성 <code>font-weight:bold</code>값을 사용하는것이 글자를 굵게 만드는데에 더 좋습니다.
 			</li>
 		</ol>
-		<div class="line_code mt_m">
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="b element CSS default">
 				<textarea readonly="readonly">
@@ -47,14 +47,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.5.b_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.5.b_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="b">
+	<aside class="browser_support mt_xxl" data-tit="b">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
