--- a/assets/01-html/05-textLevel/09-cite_element.html
+++ b/assets/01-html/05-textLevel/09-cite_element.html
@@ -20,7 +20,7 @@
 				온라인 리소스에 대한 참조를 위해 <code>&lt;cite&gt;</code> 속성을<code>&lt;blockquote&gt;</code> 또는 <code>&lt;q&gt;</code> 요소에 사용하세요.
 			</li>
 		</ol>
-		<div class="line_code mt_m">
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="cite element CSS default">
 				<textarea readonly="readonly">
@@ -32,14 +32,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.9.cite_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.9.cite_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="cite">
+	<aside class="browser_support mt_xxl" data-tit="cite">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
