--- a/assets/01-html/05-textLevel/11-sup_element.html
+++ b/assets/01-html/05-textLevel/11-sup_element.html
@@ -14,7 +14,7 @@
 			이러한 윗 첨자는 수학 공식<i class="t_blue">(ex) (a+b)2 = a2 + 2ab + b2)</i>이나 각주<i class="t_blue">(ex) WWW[1])</i> 등을 표현할 수 있습니다.<br>
 			아랫 첨자(subscript) 텍스트를 표현할 때는 <code>&lt;sub&gt;</code> 요소를 사용합니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="sup element CSS default">
 				<textarea readonly="readonly">
@@ -27,14 +27,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.11.sup_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.11.sup_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="sup">
+	<aside class="browser_support mt_xxl" data-tit="sup">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
