--- a/assets/01-html/05-textLevel/13-q_element.html
+++ b/assets/01-html/05-textLevel/13-q_element.html
@@ -12,7 +12,7 @@
 			이러한 인용구를 브라우저는 보통 앞뒤에 따옴표를 추가하여 표현합니다.
 			다른 출처로부터 인용된 인용 블록을 정의할 때는 <code>&lt;q&gt;</code> 요소보다는 <code>&lt;blockquote&gt;</code> 요소를 사용하는 것이 바람직합니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="q element CSS default">
 				<textarea readonly="readonly">
@@ -28,7 +28,7 @@
 				</textarea>
 			</div>
 		</div>
-		<ol class="indent mt_m">
+		<ol class="indent mt_ms">
 			<li>
 				cite 속성 - <code>&lt;q cite=&quot;https://www.w3.org/TR/html52/textlevel-semantics.html#the-q-element&quot;&gt;</code>
 				<div class="line_code">
@@ -38,14 +38,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.13.q_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.13.q_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="q">
+	<aside class="browser_support mt_xxl" data-tit="q">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
