--- a/assets/01-html/05-textLevel/14-code_element.html
+++ b/assets/01-html/05-textLevel/14-code_element.html
@@ -12,7 +12,7 @@
 			이때 컴퓨터 코드의 일부분이란 XML 요소의 이름이나 파일 이름, 컴퓨터 프로그램의 코드, 또는 컴퓨터가 인식할 수 있는 어떤 문자열이라도 될 수 있습니다.<br>
 			<code>&lt;code&gt;</code> 요소는 HTML5에서도 여전히 지원되지만, 대신 CSS를 사용하면 더욱 다양한 효과를 얻을 수 있습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="code element CSS default">
 				<textarea readonly="readonly">
@@ -24,14 +24,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.14.code_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.14.code_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="code">
+	<aside class="browser_support mt_xxl" data-tit="code">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
