--- a/assets/01-html/05-textLevel/15-var_element.html
+++ b/assets/01-html/05-textLevel/15-var_element.html
@@ -11,7 +11,7 @@
 			<code>&lt;var&gt;</code> 요소는 변수(variable)를 정의할 때 사용합니다.<br>
 			변수 요소 (<code>&lt;var&gt;</code>)는 수학적 표현이나 프로그래밍 변수를 나타냅니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="var element CSS default">
 				<textarea readonly="readonly">
@@ -23,14 +23,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.15.var_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.15.var_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="var">
+	<aside class="browser_support mt_xxl" data-tit="var">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
