--- a/assets/01-html/05-textLevel/17-data_element.html
+++ b/assets/01-html/05-textLevel/17-data_element.html
@@ -13,9 +13,9 @@
 			단, 해당 콘텐츠가 시간이나 날짜와 관련된 데이터라면 <code>&lt;data&gt;</code> 요소 대신 <code>&lt;time&gt;</code> 요소를 사용해야 합니다.<br>
 			<code>&lt;data&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.
 		</p>
-		<ol class="indent mt_m">
+		<ol class="indent mt_ms">
 			<li>
-				value 속성 - <b class="t_blue">&lt;data value=&quot;기계가 읽을 수 있는 형태의 값&quot;&gt;</b>
+				<code>value</code> 속성 - <b class="t_blue">&lt;data value=&quot;기계가 읽을 수 있는 형태의 값&quot;&gt;</b>
 				<div class="line_code mt_s">
 					<p><code>&lt;data&gt;</code> 요소의 콘텐츠를 기계가 읽을 수 있는 형태의 값으로 명시함.</p>
 				</div>
@@ -23,14 +23,14 @@
 		</ol>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.17.data_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.17.data_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<blockquote class="uk_note mt_l" role="note">
+	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">참고 사항</h2>
 		<p>
 			[참고] : 국제 상품 번호는 국제 상품 번호(International Article Number,<br>
@@ -46,7 +46,7 @@
 		</p>
 	</blockquote>
 
-	<aside class="browser_support mt_l" data-tit="data">
+	<aside class="browser_support mt_xxl" data-tit="data">
 		<ul>
 			<li class="ie">지원안함</li>
 			<li class="edge">지원</li>
