--- a/assets/01-html/05-textLevel/19-samp_element.html
+++ b/assets/01-html/05-textLevel/19-samp_element.html
@@ -13,7 +13,7 @@
 			<code>&lt;samp&gt;</code> 요소는 HTML5에서도 여전히 지원되지만, CSS를 대신 사용하면 더욱 다양한 효과를 얻을 수 있습니다.<br>
 			웹 사이트 또는 앱의 JavaScript 코드에서 생성된 출력을 위한 컨테이너 역할을 하는 요소가 필요한 경우 <code>&lt;output&gt;</code>요소를 사용해야 합니다 .
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="samp element CSS default">
 				<textarea readonly="readonly">
@@ -25,14 +25,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.19.samp_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.19.samp_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="samp">
+	<aside class="browser_support mt_xxl" data-tit="samp">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
