--- a/assets/01-html/05-textLevel/20-kbd_element.html
+++ b/assets/01-html/05-textLevel/20-kbd_element.html
@@ -12,7 +12,7 @@
 			<code>&lt;kbd&gt;</code> 요소 내의 텍스트는 브라우저의 기본 고정폭 글꼴을 사용하여 표현됩니다.<br>
 			<code>&lt;kbd&gt;</code> 요소는 HTML5에서도 여전히 지원되지만, CSS를 대신 사용하면 더욱 다양한 효과를 얻을 수 있습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="kbd element CSS default">
 				<textarea readonly="readonly">
@@ -24,14 +24,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.20.kbd_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.20.kbd_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="kbd">
+	<aside class="browser_support mt_xxl" data-tit="kbd">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
