--- a/assets/01-html/05-textLevel/21-bdi_element.html
+++ b/assets/01-html/05-textLevel/21-bdi_element.html
@@ -20,7 +20,7 @@
 			<code>&lt;bdi&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
 			<mark>Internet Explorer, Edge, Safari, Opera : No support(지원하지 않음)</mark>
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="bdi element CSS default">
 				<textarea readonly="readonly">
@@ -32,14 +32,14 @@
 		</div>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/05-textLevel/5.21.bdi_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/05-textLevel/5.21.bdi_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="bdi">
+	<aside class="browser_support mt_xxl" data-tit="bdi">
 		<ul>
 			<li class="ie false">지원안함</li>
 			<li class="edge false">지원안함</li>
