--- a/assets/01-html/06-embedded/01-iframe_element.html
+++ b/assets/01-html/06-embedded/01-iframe_element.html
@@ -14,13 +14,12 @@
 			주로 다른 도메인 또는 하위 도메인의 리소스를 포함하는 데 사용되지만 동일한 도메인의 콘텐츠도 포함하는 데 사용할 수 있습니다.<br>
 			<code>&lt;iframe&gt;</code>의 장점은 임베디드 코드가 <code>&apos;라이브&apos;</code>상태이며 부모 문서와 통신 할 수 있다는 것입니다.<br>
 		</p>
-		<p class="mt_m">
+		<p class="mt_ms">
 			HTML5에서는 <code>&lt;iframe&gt;</code> 요소의 align, frameborder, longdesc, marginheight, marginwidth, scrolling 속성이 더 이상 지원되지 않도록 변경되었습니다.<br>
 			또한, sandbox 속성과 srcdoc 속성이 새롭게 추가되었습니다.<br>
 			seamless 속성은 WHATWG 및 W3C HTML5 사양 모두에서 속성이 제거되었습니다. XHTML에서는 name 속성을 더 이상 지원하지 않으므로, name 속성 대신 전역 속성인 id 속성을 사용해야 합니다.
 		</p>
-
-		<div class="line_code mt_m">
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="iframe element CSS default">
 				<textarea readonly="readonly">
@@ -308,14 +307,14 @@
 			</ul>
 		</div>
 
-		<div class="view_editor edit_code mt_l" data-target="html/06-embedded/6.1.iframe_element.html">
+		<div class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.1.iframe_element.html">
 			<h3 class="ve_tit">예제</h3>
 			<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
 		</div>
 
-		<aside class="browser_support mt_l" data-tit="iframe">
+		<aside class="browser_support mt_xxl" data-tit="iframe">
 			<ul>
 				<li class="ie">지원</li>
 				<li class="edge">지원</li>
