--- a/assets/01-html/06-embedded/02-img_element.html
+++ b/assets/01-html/06-embedded/02-img_element.html
@@ -8,19 +8,17 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;img&gt;</code> 요소는 빈 요소(empty elements) 또는 단일요소 입니다.<br>
-			<code>&lt;img&gt;</code> 요소는 HTML 문서에서 이미지(image)를 정의할 때 사용합니다.<br>
+			<code>&lt;img&gt;</code> 요소는 빈 요소(empty elements) 또는 단일요소 이며, HTML 문서에서 이미지(image)를 정의할 때 사용합니다.<br>
 			<code>&lt;img&gt;</code> 요소로 정의된 이미지는 HTML 문서에 직접 삽입되는 것이 아니라, HTML 문서에 이미지가 링크되는 형태입니다.<br>
-			즉, <code>&lt;img&gt;</code> 요소는 참조된 이미지를 위한 일종의 수용 공간을 만들어 주는 것입니다.<br>
+			즉, <code>&lt;img&gt;</code> 요소는 참조된 이미지를 위한 일종의 수용 공간을 만들어 주는 것입니다.
+		</p>
+		<p class="mt_s">
 			<code>&lt;img&gt;</code> 요소에는 src(source) 속성과 alt(alternative text) 속성을 반드시 명시해야만 합니다.<br>
 			HTML5에서는 <code>&lt;img&gt;</code> 요소의 align, border, hspace, vspace 속성을 더 이상 지원하지 않습니다.<br>
 			HTML에서는 <code>&lt;img&gt;</code> 요소를 닫지 않지만, XHTML에서는 다음과 같이 반드시 요소를 닫아야만(/) 합니다.
 		</p>
-		<p class="mt_m">
-			HTML5에서는 <code>&lt;img&gt;</code> 요소의 align, border, hspace, vspace 속성이 더 이상 지원되지 않도록 변경되었습니다.
-		</p>
 
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="img element CSS default">
 				<textarea readonly="readonly">
@@ -31,7 +29,7 @@
 			</div>
 		</div>
 
-		<div class="line_code mt_m">
+		<div class="line_code mt_ms">
 			<strong class="t_blue weight-600">DOCTYPE 별 문법 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="img element">
 				<textarea readonly="readonly">
@@ -318,7 +316,7 @@
 		</article>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="img">
+	<aside class="browser_support mt_xxl" data-tit="img">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
