--- a/assets/01-html/06-embedded/04-area_element.html
+++ b/assets/01-html/06-embedded/04-area_element.html
@@ -12,7 +12,7 @@
 			<code>&lt;area&gt;</code> 요소는 이미지 맵(image-map)에서 하이퍼링크가 연결될 영역을 정의할 때 사용합니다.
 		</p>
 
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="area element CSS default">
 				<textarea readonly="readonly">
@@ -149,14 +149,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.4.area_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.4.area_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent min-height-700" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="area">
+	<aside class="browser_support mt_xxl" data-tit="area">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
