--- a/assets/01-html/06-embedded/05-video_element.html
+++ b/assets/01-html/06-embedded/05-video_element.html
@@ -22,7 +22,7 @@
 			autoplay가 지정된 경우, preload는 무시됩니다.<br>
 			<span class="reference mt_l"><a href="https://convertio.co/kr/webm-mp4/" target="_blank" title="새창열림">webm to mp4 converter</a></span>
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="video element CSS default">
 				<textarea readonly="readonly">
@@ -43,7 +43,7 @@
 				삽입(embed)할 동영상의 주소(url)입니다.<br>
 				이 속성은 선택 사항으로, 비디오 블록 내의 <code>&lt;source&gt;</code> 요소를 사용하여 삽입할 동영상을 명시할 수도 있습니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="src">
+			<aside class="browser_support mt_ms" data-tit="src">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -60,7 +60,7 @@
 			<p class="mt_s">
 				비디오의 출력 영역 너비와 높이이며, CSS 픽셀 단위입니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="width, height">
+			<aside class="browser_support mt_ms" data-tit="width, height">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -78,7 +78,7 @@
 				이 값이 설정되면, 데이터 로딩이 완료되지 않더라도 재생 가능한 시점에 자동으로 재생이 시작됩니다.<br>
 				iPhone 또는 Android에서는 지원되지 않으며, 모든 데스크톱 브라우저, iPad, Firefox와 Android용 Opera에서는 지원됩니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="autoplay">
+			<aside class="browser_support mt_ms" data-tit="autoplay">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -95,7 +95,7 @@
 			<p class="mt_s">
 				기본 동영상 컨트롤을 표시합니다(재생, 일시 중지 등).
 			</p>
-			<aside class="browser_support mt_s" data-tit="controls">
+			<aside class="browser_support mt_ms" data-tit="controls">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -112,7 +112,7 @@
 			<p class="mt_s">
 				이 값이 설정되면, 동영상 재생이 마친 후(동영상의 마지막에 도달하면) 자동으로 처음으로 돌아가서 다시 재생됩니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="loop">
+			<aside class="browser_support mt_ms" data-tit="loop">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -131,7 +131,7 @@
 				설정하면 오디오가 나오지 않습니다.<br>
 				기본 값은 <mark>false</mark>이며 이는 비디오가 재생되면 오디오도 같이 재생됨을 의미합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="muted">
+			<aside class="browser_support mt_ms" data-tit="muted">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -149,7 +149,7 @@
 				동영상 콘텐츠를 다운로드할 필요가 없이 동영상 요소가 표시되자마자 브라우저에 나타낼 수 있는 이미지 파일의 주소(URL)입니다.<br>
 				이 속성이 명시되지 않으면, 첫 번째 프레임이 사용 가능하게 될 때까지 아무것도 출력되지 않다가, 가능하게 되면 첫 번째 프레임을 포스터 프레임으로 출력합니다.
 			</p>
-			<aside class="browser_support mt_s" data-tit="poster">
+			<aside class="browser_support mt_ms" data-tit="poster">
 				<ul>
 					<li class="ie">9+</li>
 					<li class="edge">지원</li>
@@ -205,14 +205,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.5.video_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.5.video_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<section class="view_editor ex_code mt_ml" data-target="html/06-embedded/6.5.video_element_poster.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/06-embedded/6.5.video_element_poster.html">
 		<h3 class="ve_tit">예제 - poster</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [poster] attribute">
 			<textarea readonly="readonly">
@@ -228,7 +228,7 @@
 		</p>
 	</section>
 
-	<section class="view_editor ex_code mt_ml" data-target="html/06-embedded/6.5.video_element_subtitles.html">
+	<section class="view_editor ex_code mt_xl" data-target="html/06-embedded/6.5.video_element_subtitles.html">
 		<h3 class="ve_tit">예제 - subtitles</h3>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="video element [subtitles] attribute">
 			<textarea readonly="readonly">
@@ -243,7 +243,7 @@
 		</p>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="video">
+	<aside class="browser_support mt_xxl" data-tit="video">
 		<ul>
 			<li class="ie">9+</li>
 			<li class="edge">지원</li>
