--- a/assets/01-html/06-embedded/07-track_element.html
+++ b/assets/01-html/06-embedded/07-track_element.html
@@ -83,14 +83,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.7.track_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.7.track_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="track">
+	<aside class="browser_support mt_xxl" data-tit="track">
 		<ul>
 			<li class="ie">10+</li>
 			<li class="edge">지원</li>
