--- a/assets/01-html/06-embedded/12-object_element.html
+++ b/assets/01-html/06-embedded/12-object_element.html
@@ -27,7 +27,7 @@
 			또한, <code>&lt;object&gt;</code> 요소가 더 이상 <code>&lt;head&gt;</code> 요소 내에 위치할 수 없게 되었으며, 폼(form)에서 <code>&lt;object&gt;</code> 요소를 사용하거나 제출할 수 있도록 변경되었습니다.
 		</p>
 
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="object element CSS default">
 				<textarea readonly="readonly">
@@ -90,7 +90,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor ex_code mt_l" data-target="html/06-embedded/6.12.object_element.html">
+	<section class="view_editor ex_code mt_xxl" data-target="html/06-embedded/6.12.object_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div class="uk_gist_code_box indent mt_ms" data-tit="object element">
 			<textarea readonly="readonly">
@@ -122,7 +122,7 @@
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="object">
+	<aside class="browser_support mt_xxl" data-tit="object">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
