--- a/assets/01-html/06-embedded/13-param_element.html
+++ b/assets/01-html/06-embedded/13-param_element.html
@@ -14,7 +14,7 @@
 		<p class="mt_s">
 			HTML5에서는 <code>&lt;param&gt;</code>요소에서 type, valuetype 속성을 더 이상 지원하지 않습니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="param element CSS default">
 				<textarea readonly="readonly">
@@ -48,14 +48,14 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/06-embedded/6.13.param_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/06-embedded/6.13.param_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
 
-	<aside class="browser_support mt_l" data-tit="param">
+	<aside class="browser_support mt_xxl" data-tit="param">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
