--- a/assets/01-html/07-edits/02-ins_element.html
+++ b/assets/01-html/07-edits/02-ins_element.html
@@ -13,7 +13,7 @@
 			또한, <code>&lt;del&gt;</code> 요소는 텍스트 한가운데 라인을 추가하여 문서에서 삭제된 텍스트를 표현합니다.<br>
 			이와 같이 <code>&lt;del&gt;</code> 요소와 <code>&lt;ins&gt;</code> 요소는 문서에 대한 업데이트나 수정을 표현할 때 사용하며, 브라우저는 이를 일반 텍스트에 라인을 추가하는 것으로 표현할 것입니다.
 		</p>
-		<div class="line_code mt_m">
+		<div class="line_code mt_s">
 			<strong class="t_blue weight-600">CSS 기본값 :</strong>
 			<div class="uk_gist_code_box indent mt_s" data-tit="ins element CSS default">
 				<textarea readonly="readonly">
@@ -46,7 +46,7 @@
 		</article>
 	</section>
 
-	<section class="view_editor edit_code mt_l" data-target="html/07-edits/7.2.ins_element.html">
+	<section class="view_editor edit_code mt_xxl" data-target="html/07-edits/7.2.ins_element.html">
 		<h2 class="ve_tit">예제</h2>
 		<div  class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
@@ -54,7 +54,7 @@
 	</section>
 
 
-	<aside class="browser_support mt_l" data-tit="ins">
+	<aside class="browser_support mt_xxl" data-tit="ins">
 		<ul>
 			<li class="ie">지원</li>
 			<li class="edge">지원</li>
